--- a/.rmt.yml
+++ b/.rmt.yml
@@ -13,7 +13,8 @@ _default:
     prerequisites:
      - working-copy-check
      - display-last-changes
-     - tests-check
+     - tests-check:
+        command: vendor/bin/phpunit
      - composer-stability-check
      - composer-security-check
 
