--- a/composer.json
+++ b/composer.json
@@ -8,12 +8,12 @@
     "authors": [{ "name": "Peter Petermann", "email": "ppetermann80@gmail.com", "homepage": "https://devedge.eu" }],
 
     "require": {
-        "php": "~7.2",
+        "php": ">=7.2",
         "psr/http-message": "~1.0",
         "psr/container": "~1.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "~7.3"
+        "phpunit/phpunit": "~8"
     },
     "autoload": {
         "psr-4": {
